# haskel-user-service

./: .flaskenv  requirements.txt  run.py
haskel-user-service/: config.py  pyproject.toml
haskel-user-service/migrations/versions/: 2f6b0a289446_initial_user_model_for_sqlite.py
haskel-user-service/project/: __init__.py
haskel-user-service/project/models/: user.py
haskel-user-service/project/routes/: __init__.py  admin_routes.py
instance/: haskel.db  haskel_user.db
migrations/versions/: b73837fd16b9_initial_models.py
project/routes/: auth_routes.py  user_routes.py
project/utils/: auth_decorator.py
